adjust letter spacing in button and set to fixed width for main panel

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ h2, h5, h6, a {
 
 .panel {
     width: 90%;
-    min-width: 300px;
+    width: 350px;
     height: 650px;
     background-color: #fff;
     margin: 70px auto;
@@ -123,6 +123,7 @@ h2, h5, h6, a {
     color: white;
     font-weight: 650;
     font-size: 15px;
+    letter-spacing: .8px;
     margin-top: 10px;
 }
 
